--- a/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
+++ b/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
@@ -22,13 +22,49 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Kkf-ZA-CIt"/>
+                    <navigationItem key="navigationItem" id="Kkf-ZA-CIt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Mww-11-AGm">
+                            <connections>
+                                <segue destination="tr6-4t-Y5y" kind="push" id="2bx-tv-g1R"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="ZLp-9q-dRJ" id="SHQ-Yd-KhI"/>
                     </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="619" y="167"/>
+        </scene>
+        <!--Add Venue Table View Controller-->
+        <scene sceneID="sKW-4S-5vZ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H6i-WH-afR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="tr6-4t-Y5y" customClass="AddVenueTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="VTh-ee-AVl">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="aXI-Ig-DTb">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="tr6-4t-Y5y" id="DDN-ps-FfB"/>
+                            <outlet property="delegate" destination="tr6-4t-Y5y" id="O4i-Ww-bmo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="pqk-Wk-hBK"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1050" y="166"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z00-cS-tzf">
@@ -50,6 +86,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AddVenueTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddVenueTableViewController.h"/>
+        </class>
         <class className="MapViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
             <relationships>
