--- a/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
+++ b/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
@@ -97,7 +97,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2i-G0-cZ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="L0T-ai-XUH" customClass="VenueViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="XdZ-fV-HUj">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="XdZ-fV-HUj">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -209,6 +209,13 @@
                                                         <segment title="None"/>
                                                     </segments>
                                                 </segmentedControl>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Power Outlets Label" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="ZpW-dX-yGo">
+                                                    <rect key="frame" x="165" y="11" width="135" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -222,11 +229,16 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="q04-Ee-LbP">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="oG9-x3-ukB"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="oG9-x3-ukB">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="L0T-ai-XUH" id="xmp-kE-EcN"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="coffeePrice" destination="oTc-BA-j6l" id="NFr-VK-KMk"/>
                         <outlet property="powerOutlets" destination="AfF-33-wf0" id="i6F-va-UHI"/>
+                        <outlet property="powerOutletsLabel" destination="ZpW-dX-yGo" id="nbf-KG-8Az"/>
                         <outlet property="saveButton" destination="oG9-x3-ukB" id="eaz-dB-yi2"/>
                         <outlet property="wifiPassword" destination="CbK-lG-MhE" id="JjL-oC-j7f"/>
                         <outlet property="wifiSSID" destination="3uo-N2-SjT" id="i1a-uA-G6D"/>
@@ -236,27 +248,6 @@
             <point key="canvasLocation" x="1612" y="11"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="AddVenueTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddVenueTableViewController.h"/>
-        </class>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="VenueViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VenueViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="coffeePrice" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="powerOutlets" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="saveButton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="wifiPassword" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="wifiSSID" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
